config style prime and tailwind

--- a/vue/src/assets/css/other/tailwind.css
+++ b/vue/src/assets/css/other/tailwind.css
@@ -1,4 +1,5 @@
-@layer tailwind-base, primevue, tailwind-utilities;
+@import "tailwindcss";
+/* @layer tailwind-base, primevue, tailwind-utilities;
 
 @layer tailwind-base {
     @tailwind base;
@@ -7,4 +8,4 @@
 @layer tailwind-utilities {
     @tailwind components;
     @tailwind utilities;
-}
+} */
