selesai buat kategori - vue

--- a/vue/src/assets/base.css
+++ b/vue/src/assets/base.css
@@ -44,3 +44,7 @@
 
   --box-shadow: 0 4px 12px -5px rgb(0 0 0 / 0.1), 0 2px 5px -6px rgb(0 0 0 / 0.1);
 }
+
+body {
+  background-color: #f1f1f1;
+}
