perbaikan tailwind di prime vue  - vue

--- a/vue/src/assets/css/login/main.css
+++ b/vue/src/assets/css/login/main.css
@@ -23,90 +23,6 @@
    position: relative;
 }
 
-.login .wrapper {
-   width: 990px;
-   box-shadow: 10px 10px 20px rgba(200, 208, 216, 0.3);
-   border-radius: 2rem;
-   height: 75vh;
-   overflow: hidden;
-}
-
-.login .wrapper .left {
-   position: relative;
-   z-index: 5;
-   overflow: hidden;
-   padding-bottom: 0;
-   background-image: var(--bg-img);
-   background-repeat: no-repeat;
-   background-attachment: fixed;
-   background-size: cover;
-   background-position: center;
-   position: relative;
-   color: #ffffff;
-   z-index: 1;
-}
-.login .wrapper .left::before {
-   position: absolute;
-   content: "";
-   left: 0;
-   top: 0;
-   height: 100%;
-   width: 100%;
-   background: linear-gradient(21deg, rgba(32, 117, 204, 0.9) 40%, rgba(5, 47, 92, 0.8)100%);
-   opacity: .9;
-   z-index: -1;
-}
-
-.login .wrapper .left::after {
-   position: absolute;
-   content: "";
-   left: 0;
-   top: 0;
-   height: 100%;
-   width: 100%;
-   background-image: url("@/assets/images/pattern/small-patern.png");
-   opacity: .2;
-   z-index: -1;
-}
-
-.login .wrapper .left .logo 
-{
-   width: 65%;
-   margin: auto;
-}
-
-.login .wrapper .left .shape-art {
-   position: absolute;
-   top: 32vh;
-   right: 19vh;
-   background-repeat: repeat;
-   background-image: url("@/assets/images/pattern/small-patern.png");
-   z-index: -1;
-   opacity: .7;
-}
-
-.login .wrapper .right{
-   height: 100%;
-   z-index: 5;
-   position: relative;
-   background-color: #ffffff;
-}
-
-
-.login .wrapper .right .logo
-{
-   width: 130px;
-}
-
-.login .wrapper  .right .form label {
-   font-weight: 400;
-   color: var(--blue-800);
-}
-
 .login .form .p-inputtext {
-   width: 100%;
-   margin-top: 10px;
-   --p-inputtext-background: #e9ecf7;
-   --p-inputtext-border-color: #e9ecf7;
-   /* color: #ffffff */
- }
+   border-color: var(--color-sky-300);
+}
