--- a/vue/src/assets/css/other/tailwind.css
+++ b/vue/src/assets/css/other/tailwind.css
@@ -1,11 +1,2 @@
 @import "tailwindcss";
-/* @layer tailwind-base, primevue, tailwind-utilities;
-
-@layer tailwind-base {
-    @tailwind base;
-}
-
-@layer tailwind-utilities {
-    @tailwind components;
-    @tailwind utilities;
-} */
+@import "tailwindcss-primeui";
