--- a/vue/src/assets/css/home/main.css
+++ b/vue/src/assets/css/home/main.css
@@ -19,6 +19,10 @@
 
 .home .header .search .p-button-icon-only {
    background-color: var(--color-sky-500);
-   padding: 10px 18px;
+   padding: 10px 35px;
    border-radius: 5px;
 }
+
+.home .header .keranjang .p-button-text.p-button-secondary:not(:disabled):hover {
+   background: transparent !important;
+ }
