--- a/vue/src/assets/css/login/main.css
+++ b/vue/src/assets/css/login/main.css
@@ -3,26 +3,8 @@
 
 }
 
-.login {
-   display: -ms-flexbox;
-   display: -webkit-box;
-   display: flex;
-   -ms-flex-align: center;
-   -ms-flex-pack: center;
-   -webkit-box-align: center;
-   align-items: center;
-   -webkit-box-pack: center;
-   justify-content: center;
-   /* padding: 0; */
-   height: 100vh;
-   background-image: url('./../../images/background/login.svg');
-   background-repeat: no-repeat;
-   background-size: cover;
-   background-attachment: fixed;
-   background-position: left;
-   position: relative;
-}
 
-.login .form .p-inputtext {
-   border-color: var(--color-sky-300);
+.login .form .p-inputtext{
+   border-color: var(--p-indigo-300);
+   margin-top: 0px !important;
 }
